# psgen2_hax

./: README.md  psgen2_character_sheet.md  psgen2_enemies.md  psgen2_interesting_memory.md  psgen2_savenei.md
aeroprism/: .gitignore  Cargo.toml  README.md  SLPM-notes.txt  SLPM_625.53  enemies.txt  enemies_engrish.txt  engrish.txt  figures_engrish.txt  google_translated_jap.txt  hand dasm of 0001.bin.txt  hand dasm of 0002.bin.txt  ps2jis.txt  rustfmt.toml  sjis.txt  test.ps1  text.txt  text_engrish.txt
aeroprism/alt_palettes/: note.txt
aeroprism/src/: helpers.rs  images.rs  lz77_le.rs  main.rs  sggg_codec.rs  sjis_map.rs  slpm_patcher.rs
aeroprism/src/events/: codec.rs  mod.rs  sjis_map.rs
de-engrish/: Cargo.toml
de-engrish/src/: main.rs
enemies_parser/: Cargo.toml
enemies_parser/src/: enemydata.rs  main.rs
